crates/oxc_react_compiler/tests/snapshots/allow-passing-ref-to-render-helper-props-object.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-passing-ref-to-render-helper-props-object.js
---
import { c as _c } from "react/compiler-runtime";
// @enableTreatRefLikeIdentifiersAsRefs @validateRefAccessDuringRender
import { useRef } from "react";
function Component(props) {
	const $ = _c(3);
	const ref = useRef(null);
	const T0 = Foo;
	const t0 = props.render({ ref });
	let t1;
	if ($[0] !== T0 || $[1] !== t0) {
		t1 = <T0>{t0}</T0>;
		$[0] = T0;
		$[1] = t0;
		$[2] = t1;
	} else {
		t1 = $[2];
	}
	return t1;
}
