crates/oxc_react_compiler/tests/snapshots/allow-passing-refs-as-props.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-passing-refs-as-props.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(1);
	const ref = useRef(null);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <Foo ref={ref} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
