crates/oxc_react_compiler/tests/snapshots/allow-reassignment-to-global-function-jsx-prop.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-reassignment-to-global-function-jsx-prop.js
---
import { c as _c } from "react/compiler-runtime";
function Component() {
	const $ = _c(1);
	const onClick = _temp;
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = <div onClick={onClick} />;
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0;
}
function _temp() {
	someUnknownGlobal = true;
	moduleLocal = true;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
