crates/oxc_react_compiler/tests/snapshots/allow-ref-access-in-effect-indirect.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-ref-access-in-effect-indirect.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Refs: Cannot access refs during render", labels: [LabeledSpan { label: Some("Cannot access ref value during render"), span: Span { start: 737, end: 748 }, primary: false }], help: Some("React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

import { c as _c } from "react/compiler-runtime";
// @validateRefAccessDuringRender @validateNoSetStateInRender:false
import { useCallback, useEffect, useRef, useState } from "react";
function Component() {
	const $ = _c(7);
	const ref = useRef(null);
	const [state, setState] = useState(false);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = () => {
			ref.current = "Ok";
		};
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	const setRef = t0;
	let t1;
	let t2;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = () => {
			setRef();
		};
		t2 = [];
		$[1] = t1;
		$[2] = t2;
	} else {
		t1 = $[1];
		t2 = $[2];
	}
	useEffect(t1, t2);
	let t3;
	let t4;
	if ($[3] === Symbol.for("react.memo_cache_sentinel")) {
		t3 = () => {
			setState(true);
		};
		t4 = [];
		$[3] = t3;
		$[4] = t4;
	} else {
		t3 = $[3];
		t4 = $[4];
	}
	useEffect(t3, t4);
	const t5 = String(state);
	let t6;
	if ($[5] !== t5) {
		t6 = <Child key={t5} ref={ref} />;
		$[5] = t5;
		$[6] = t6;
	} else {
		t6 = $[6];
	}
	return t6;
}
function Child({ ref }) {
	"use no memo";
	return ref.current;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
