crates/oxc_react_compiler/tests/snapshots/allow-ref-access-in-unused-callback-nested.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-ref-access-in-unused-callback-nested.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Refs: Cannot access refs during render", labels: [LabeledSpan { label: Some("Cannot access ref value during render"), span: Span { start: 666, end: 677 }, primary: false }], help: Some("React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

import { c as _c } from "react/compiler-runtime";
// @validateRefAccessDuringRender
import { useEffect, useRef, useState } from "react";
function Component() {
	const $ = _c(5);
	const ref = useRef(null);
	const [state, setState] = useState(false);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t0 = [];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	useEffect(_temp, t0);
	let t1;
	let t2;
	if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = () => {
			setState(true);
		};
		t2 = [];
		$[1] = t1;
		$[2] = t2;
	} else {
		t1 = $[1];
		t2 = $[2];
	}
	useEffect(t1, t2);
	const t3 = String(state);
	let t4;
	if ($[3] !== t3) {
		t4 = <Child key={t3} ref={ref} />;
		$[3] = t3;
		$[4] = t4;
	} else {
		t4 = $[4];
	}
	return t4;
}
function _temp() {}
function Child({ ref }) {
	"use no memo";
	return ref.current;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{}]
};
