crates/oxc_react_compiler/tests/snapshots/allow-ref-type-cast-in-render.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/allow-ref-type-cast-in-render.js
---
import { c as _c } from "react/compiler-runtime";
import { useRef } from "react";
function useArrayOfRef() {
	const $ = _c(1);
	const ref = useRef(null);
	let t0;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		const callback = (value) => {
			ref.current = value;
		};
		t0 = [callback];
		$[0] = t0;
	} else {
		t0 = $[0];
	}
	return t0 as const;
}
export const FIXTURE_ENTRYPOINT = {
	fn: () => {
		useArrayOfRef();
		return "ok";
	},
	params: [{}]
};
